style: fixed style issues, update slider layout and styling

--- a/src/css/blocks/slider/__button/slider__button.css
+++ b/src/css/blocks/slider/__button/slider__button.css
@@ -25,7 +25,7 @@
 } */
 
 .slider__button::after {
-  content: url("../../../images/arrow-icon-white.svg");
+  content: url("../../../../images/arrow-icon-white.svg");
   display: inline-block;
   top: 2px;
 }
