--- a/src/about/index.css
+++ b/src/about/index.css
@@ -7,11 +7,9 @@
 @import url("../css/blocks/technology/technology.css");
 @import url("../css/blocks/clients/clients.css");
 @import url("../css/blocks/author/author.css");
-/* @import url("../css/blocks/slider/slider.css"); */
+@import url("../css/blocks/slider/slider.css");
 @import url("../css/blocks/commit/commit.css");
 @import url("../css/blocks/footer/footer.css");
 @import url("../css/blocks/link/link.css");
 @import url("../css/blocks/github/github.css");
 @import url("../css/blocks/button/button.css");
-
-
