--- a/src/css/blocks/slider/slider.css
+++ b/src/css/blocks/slider/slider.css
@@ -1,1 +1,3 @@
 @import url("./__container/slider__container.css");
+@import url("./__button/slider__button.css");
+@import url("./__bullets/slider__bullets.css");
