feat: comment out Flickity functionality to prevent errors

--- a/src/about/index.css
+++ b/src/about/index.css
@@ -1,6 +1,6 @@
 @import url("../vendor/normalize.css");
 @import url("../vendor/fonts.css");
-@import url("../vendor/flickity.css");
+/* @import url("../vendor/flickity.css"); */
 @import url("../css/blocks/page/page.css");
 @import url("../css/blocks/main/main.css");
 @import url("../css/blocks/header/header.css");
